[tool.poetry]
name = "orgmunge"
version = "0.1.1"
description = "Access org files inside python"
authors = ["Delta Sharp <nalisarc@gmail.com>"]
license = "LICENSE"
readme = "README"

[tool.poetry.dependencies]
python = "^3.10"
ply = "^3.11"

[tool.poetry.group.dev.dependencies]
build = "^1.0.3"
twine = "^4.0.2"
black = "^23.9.1"
pip-tools = "^7.3.0"
pytest = "^7.4.2"
bumpver = "^2023.1126"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
